src/tests/snapshots/gitu__tests__stash__stash_apply_default.snap
---
source: src/tests/stash.rs
expression: ctx.redact_buffer()
---
▌On branch main                                                                 |
▌Your branch is up to date with 'origin/main'.                                  |
                                                                                |
 Untracked files                                                                |
 file-two                                                                       |
                                                                                |
 Stashes                                                                        |
 stash@0 On main: file-two                                                      |
 stash@1 On main: file-one                                                      |
                                                                                |
 Recent commits                                                                 |
 b66a0bf main origin/main add initial-file                                      |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
$ git stash apply -q 0                                                          |
Already up to date.                                                             |
styles_hash: fe20d9472776be1c
